--- a/index.html
+++ b/index.html
@@ -1,21 +1,75 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <style>
+      .button {
+        border: none;
+        background-color: #FFFFFF;
+        font-family: 'Mulish';
+        font-size: 12px;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #676767;
+        border-radius: 100px;
+        padding: 10px 64px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+        </style>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Lavishly+Yours&family=Mulish:wght@300;700&display=swap" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/faaa3545f1.js" crossorigin="anonymous"></script>
     <title>meet mello</title>
   </head>
-  
-<body>
-<header>
-<img src="images/header.png">
-</header>
 
-<footer>
-<img src="images/footer.png">
-</footer>
+<div class="header">
+  <img src="images/header_v2.png">
+</div>
+
+<body>
+<div class="meetmello">
+  <center>
+    <img src="images/logo-22.png"><br><br>
+    <h1>meet</h1>&nbsp;&nbsp;&nbsp;&nbsp;<h2>mello</h2>
+    <h3>Mental health support app developed by<br> The National Suicide Prevention Lifeline</h3>
+  </center>
+</div>
+
+
+<div class="appcontent">
+  <h4>Someone to talk to wherever and whenever</h4>
+  <img src="images/Icon.png"><br>
+  <h5>24/7 free and confidential emotional support for people in suicidal or emotional distress <br><br>
+  Available on the go via web chat or our phone hotline</h5>
+  <button class="button">Learn More</button><br>
+</div>
+
+
+<div class="appcontent" style="background-color: #AFCAD4;">
+  <h4>Crisis management in hand</h4>
+  <img src="images/mental health support.png"><br>
+  <h5>Continued mental health support throughout your day with mood check-ins, guided meditation, resources, exercise videos, and suggested tunes</h5>
+  <button class="button">Learn More</button><br>
+</div>
+
+
+<div class="appcontent" style="background-color: #FFFFFF;">
+  <img src="images/screens.png"><br>
+  <img src="images/download buttons.png"><br>
+  <h4 style="color:#7C9482;">You deserve care and a listening ear no matter what. <br>
+    Let us be there for you anytime and anywhere.</h4>
+</div>
+
+</body>
+
+
+<div class="footer">
+  <img src="images/footer.png">
+</div>
