--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 
 <div class="appcontent">
-  <h4>Someone to talk to wherever and whenever</h4>
+  <h4>Someone to talk to at all times</h4>
   <img src="images/Icon.png"><br>
   <h5>24/7 free and confidential emotional support for people in suicidal or emotional distress <br><br>
   Available on the go via web chat or our phone hotline</h5>
@@ -53,9 +53,9 @@
 
 
 <div class="appcontent" style="background-color: #AFCAD4;">
-  <h4>Crisis management in hand</h4>
+  <h4>Continued mental health support throughout your day</h4>
   <img src="images/mental health support.png"><br>
-  <h5>Continued mental health support throughout your day with mood check-ins, guided meditation, resources, exercise videos, and suggested tunes</h5>
+  <h5>Mood check-ins, guided meditation, resources, exercise videos, and suggested tunes to help you take care of your emotional well-being</h5>
   <button class="button">Learn More</button><br>
 </div>
 
@@ -67,9 +67,8 @@
     Let us be there for you anytime and anywhere.</h4>
 </div>
 
-</body>
-
-
 <div class="footer">
   <img src="images/footer.png">
 </div>
+
+</body>
