--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
         margin: 4px 2px;
         cursor: pointer;
       }
-        </style>
+    </style>
     <link rel="stylesheet" type="text/css" href="CSS/style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&family=Lavishly+Yours&family=Mulish:wght@300;700&display=swap" rel="stylesheet">
 
-    <script src="https://kit.fontawesome.com/faaa3545f1.js" crossorigin="anonymous"></script>
     <title>meet mello</title>
   </head>
 
@@ -72,3 +71,4 @@
 </div>
 
 </body>
+</html>
