--- a/index.html
+++ b/index.html
@@ -2,7 +2,24 @@
 <html>
   <head>
     <style>
-      .button {
+      .button_one {
+        border: none;
+        background-color: #FFFFFF;
+        font-family: 'Mulish';
+        font-size: 12px;
+        font-weight: bold;
+        text-transform: uppercase;
+        color: #676767;
+        border-radius: 100px;
+        padding: 10px 64px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+
+      .button_two {
         border: none;
         background-color: #FFFFFF;
         font-family: 'Mulish';
@@ -47,7 +64,7 @@
   <img src="images/Icon.png"><br>
   <h5>24/7 free and confidential emotional support for people in suicidal or emotional distress <br><br>
   Available on the go via web chat or our phone hotline</h5>
-  <button class="button">Learn More</button><br>
+  <button class="button_one">Learn More</button><br>
 </div>
 
 
@@ -55,7 +72,7 @@
   <h4>Continued mental health support throughout your day</h4>
   <img src="images/mental health support.png"><br>
   <h5>Mood check-ins, guided meditation, resources, exercise videos, and suggested tunes to help you take care of your emotional well-being</h5>
-  <button class="button">Learn More</button><br>
+  <button class="button_two">Learn More</button><br>
 </div>
 
 
